# python-school-ja

./: .envrc.template  .gitignore  .travis.yml  LICENSE  README.rst  advanced.html  basic-scripting.html  basic-syntax.html  cmdline-1.html  cmdline-2.html  cmdline-3.html  cmdline-4.html  cmdline-5.html  cmdline-6.html  csv-1.html  csv-2.html  csv-3.html  csv-4.html  csv-5.html  csv-6.html  devsetup.sh  docserver.py  documents.html  genindex.html  getting-started.html  index.html  objects.inv  processing-csv-file-1.html  processing-csv-file-2.html  processing-csv-file-3.html  processing-csv-file-4.html  processing-csv-file-5.html  processing-csv-file-6.html  processing-xml-file.html  projects.html  requirements-app.txt  requirements-dev.txt  requirements.html  requirements.txt  run-test.html  (+9 more)
.circleci/: config.yml
_sources/: index.txt  processing-csv-file-4.txt  processing-xml-file.txt  projects.txt  run-test.txt  toy-program.txt  wrap-bash.txt
advanced/: advanced-1.html  advanced-2.html  advanced-3.html  advanced-4.html  advanced-5.html  index.html
cmdline/: cmdline-1.html  cmdline-2.html  cmdline-3.html  cmdline-4.html  cmdline-5.html  cmdline-6.html  index.html
csv/: csv-1.html  csv-2.html  csv-3.html  csv-4.html  csv-5.html  csv-6.html  index.html
doc/: Guardfile  basic-syntax.txt  cmdline-1.txt  cmdline-2.txt  cmdline-3.txt  cmdline-6.txt  conf.py  csv-1.txt  csv-2.txt  csv-3.txt  csv-6.txt  getting-started.txt  index.txt  make.bat  processing-csv-file-1.txt  processing-csv-file-2.txt
docs/: Makefile  getting-started.txt  index.html
etc/: csv-1.csv  (+7 more)
(+139 files in other folders)
