[metadata]
name = pyschool
version = 0.0.1
description = A small example package
long_description = file: README.rst
license = MIT
author = Shigeru Kitazaki
author_email = skitazaki@gmail.com
url = https://github.com/skitazaki/python-school-ja/
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    PyYAML >= 5.3.1

[options.packages.find]
where = src

[options.extras_require]
dev =
    black >= 19.10b0
    flake8 >= 3.7.9
test =
    pytest >= 5.4.1
docs =
    livereload >= 2.6
    Sphinx >= 2.4.4

[flake8]
exclude = build,.git,.tox,./tests/.env,venv,docs/conf.py
# ignore = W504,W601
max-line-length = 119
